[package]
name = "icopng"
version = "1.0.0"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Embed a PNG directly into an ICO file"
homepage = "https://github.com/cdown/icopng"
readme = "README.md"
keywords = ["ico", "favicon", "web"]
license = "Unlicense"
edition = "2021"

[dependencies]
png = "0.17.8"
anyhow = "1.0.70"
byteorder = "1.4.3"

[profile.release]
lto = true
codegen-units = 1
debug = true
