[package]
name = "icopng"
version = "1.0.1"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Embed a PNG directly into an ICO file"
homepage = "https://github.com/cdown/icopng"
readme = "README.md"
keywords = ["ico", "favicon", "web"]
license = "Unlicense"
edition = "2021"

[dependencies]
png = "0.17.10"
anyhow = "1.0.78"
byteorder = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
debug = true
